# Backend

./: .env  .gitignore  Cargo.toml  drop_tables.sql
bins/web-server/: Cargo.toml
bins/web-server/src/: logbot.rs  main.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20250504000001_create_schema.sql  20250504000001_create_users_table.sql  20250504000002_create_community_table.sql
crates/database/src/: connection.rs
crates/database/src/model/: community.rs  content.rs  depositor.rs  mod.rs  user.rs
crates/database/src/repository/: community_repository.rs  content_repository.rs  mod.rs  user_repository.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: community_handler.rs  content_handler.rs  lib.rs  user_handler.rs
crates/libs/database/: Cargo.toml
crates/libs/database/src/: lib.rs
crates/libs/model/src/: lib.rs
crates/libs/routes/: Cargo.toml
crates/libs/routes/src/: lib.rs
crates/routes/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: community_service.rs  content_service.rs  lib.rs  user_service.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: main.rs
migrations/: 20250504000001_create_users_table.sql  20250504000002_create_content_table.sql  20250504000003_create_depositor_table.sql
