[package]
name = "pulse_handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
pulse_database = { workspace = true }
pulse_service = { workspace = true }
axum = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
